--- a/config.yml
+++ b/config.yml
@@ -36,7 +36,7 @@ languages:
       main:
       - identifier: 网址索引
         name: 网址索引
-        url: /网址索引
+        url: /posts/网址索引目录
       - identifier: 学校
         name: "#学校"
         url: /tags/学校
